hphp/hack/test/typecheck/test_consts9.php.exp
File "test_consts9.php", line 7, characters 10-17:
Invalid return type (Typing[4110])
File "test_consts9.php", line 6, characters 39-44:
This is a string
File "test_consts9.php", line 4, characters 18-20:
It is incompatible with an int
